--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,5 +23,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "workspaces": {
+    "nohoist": [
+      "**/jest",
+      "**/jest/**"
+    ]
+  }
 }
